--- a/TodoApp_practice/TodoCell.xib
+++ b/TodoApp_practice/TodoCell.xib
@@ -8,33 +8,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TodoCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoCell" rowHeight="61" id="s7T-Fa-Lc8" customClass="TodoCell" customModule="TodoApp_practice" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="401" height="61"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TodoCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoCell" rowHeight="83" id="s7T-Fa-Lc8" customClass="TodoCell" customModule="TodoApp_practice" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="401" height="83"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s7T-Fa-Lc8" id="fuP-CY-aAc">
-                <rect key="frame" x="0.0" y="0.0" width="401" height="61"/>
+                <rect key="frame" x="0.0" y="0.0" width="401" height="83"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleAspectFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bGR-qv-vEa">
-                        <rect key="frame" x="0.0" y="0.0" width="401" height="61"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bGR-qv-vEa">
+                        <rect key="frame" x="0.0" y="0.0" width="401" height="83"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HPs-NE-X6f">
-                                <rect key="frame" x="8" y="8" width="45" height="45"/>
+                                <rect key="frame" x="8" y="8" width="50" height="67"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7dv-rR-7h7">
-                                        <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="by0-h5-Jvz"/>
-                                            <constraint firstAttribute="height" constant="45" id="yPn-vS-JA1"/>
-                                        </constraints>
+                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7dv-rR-7h7">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="67"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="✅"/>
                                         <connections>
                                             <action selector="onDoneBtn:" destination="s7T-Fa-Lc8" eventType="touchUpInside" id="zpc-vP-FeX"/>
                                         </connections>
                                     </button>
-                                    <button hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKO-Dd-PcE">
-                                        <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
+                                    <button hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKO-Dd-PcE">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="67"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="📌"/>
                                         <connections>
@@ -49,12 +45,13 @@
                                     <constraint firstAttribute="bottom" secondItem="7dv-rR-7h7" secondAttribute="bottom" id="NhO-ba-XjQ"/>
                                     <constraint firstItem="fKO-Dd-PcE" firstAttribute="leading" secondItem="7dv-rR-7h7" secondAttribute="leading" id="VEJ-L3-P36"/>
                                     <constraint firstItem="7dv-rR-7h7" firstAttribute="leading" secondItem="HPs-NE-X6f" secondAttribute="leading" id="cSb-bS-Rhr"/>
+                                    <constraint firstAttribute="width" constant="50" id="cWf-AI-wLv"/>
                                     <constraint firstItem="7dv-rR-7h7" firstAttribute="top" secondItem="HPs-NE-X6f" secondAttribute="top" id="o4b-qs-dDh"/>
                                     <constraint firstAttribute="trailing" secondItem="7dv-rR-7h7" secondAttribute="trailing" id="xb6-gZ-fCF"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AUy-Ly-r1B">
-                                <rect key="frame" x="58" y="8" width="335" height="45"/>
+                                <rect key="frame" x="63" y="8" width="330" height="67"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -75,7 +72,7 @@
                 <outlet property="doneBtn" destination="7dv-rR-7h7" id="M52-t1-gRo"/>
                 <outlet property="todos" destination="AUy-Ly-r1B" id="7ap-jE-a0H"/>
             </connections>
-            <point key="canvasLocation" x="270.99236641221376" y="-104.5774647887324"/>
+            <point key="canvasLocation" x="270.99236641221376" y="-96.83098591549296"/>
         </tableViewCell>
     </objects>
 </document>
